--- a/PatternColorizer/MainWindow.xaml
+++ b/PatternColorizer/MainWindow.xaml
@@ -5,5 +5,6 @@
     <Grid>
         <Button Content="OutputPatterns" Height="43" HorizontalAlignment="Left" Name="RenderLayers" VerticalAlignment="Top" Width="100" Click="OutputPatterns_Click" />
         <Button Content="RecolorPatterns" Height="43" HorizontalAlignment="Left" Margin="0,66,0,0" Name="RecolorPatterns" VerticalAlignment="Top" Width="100" Click="RecolorPatterns_Click" />
+        <Button Content="VisPermutations" Height="43" HorizontalAlignment="Left" Margin="0,130,0,0" Name="VisPermutations" VerticalAlignment="Top" Width="100" Click="VisPermutations_Click" />
     </Grid>
 </Window>
