--- a/PatternColorizer/MainWindow.xaml
+++ b/PatternColorizer/MainWindow.xaml
@@ -8,7 +8,7 @@
         <Button Content="VisPermutations" Height="43" HorizontalAlignment="Left" Margin="0,130,0,0" Name="VisPermutations" VerticalAlignment="Top" Width="100" Click="VisPermutations_Click" />
         <Button Content="VisStyles" Height="43" HorizontalAlignment="Left" Margin="0,190,0,0" Name="VisStyles" VerticalAlignment="Top" Width="100" Click="VisStyles_Click" />
         <Button Content="RenderTableau" Height="43" HorizontalAlignment="Left" Margin="120,0,0,0" Name="RenderTableau" VerticalAlignment="Top" Width="100" Click="RenderPreview_Click" />
-        
+        <Button Content="RenderTurk" Height="43" HorizontalAlignment="Left" Margin="120,66,0,0" Name="RenderTurk" VerticalAlignment="Top" Width="100" Click="RenderTurk_Click" />
         <Label Content="OutDir" Height="43" HorizontalAlignment="Left" Margin="0,250,0,0" Name="OutDirLabel" />
         <Button Content="Change IO Directory" Height="43" HorizontalAlignment="Right" Margin="120,250,0,0" VerticalAlignment="Top" Name="ChangeIODir" Click="ChangeIODir_Click"/>
     </Grid>
